Some snippets added :)

--- a/snippets/package.json
+++ b/snippets/package.json
@@ -14,6 +14,19 @@
       },
       {
         "language": [
+          "php",
+          "html"
+        ],
+        "path": "./html.json"
+      },
+      {
+        "language": [
+          "php"
+        ],
+        "path": "./php.json"
+      },
+      {
+        "language": [
           "javascript",
           "typescript",
           "javascriptreact",
