--- a/snippets/package.json
+++ b/snippets/package.json
@@ -8,14 +8,18 @@
       {
         "language": [
           "css",
-          "scss"
+          "scss",
+          "astro",
+          "vue"
         ],
         "path": "./css.json"
       },
       {
         "language": [
           "php",
-          "html"
+          "html",
+          "astro",
+          "vue"
         ],
         "path": "./html.json"
       },
@@ -30,7 +34,8 @@
           "javascript",
           "typescript",
           "javascriptreact",
-          "typescriptreact"
+          "typescriptreact",
+          "astro"
         ],
         "path": "./js.json"
       }
